k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-backend
  namespace: default
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: campus-backend
  template:
    metadata:
      labels:
        app: campus-backend
        version: "force-refresh-01"
    spec:
      containers:
      - name: backend
        image: dist_sys_app-backend:latest
        imagePullPolicy: Always
        
        args: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
       
        livenessProbe:
          httpGet:
            path: /health 
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
       
---
apiVersion: v1
kind: Service
metadata:
  name: campus-backend-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: campus-backend
