k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-ingress
  namespace: default
  annotations:
    
    kubernetes.io/ingress.class: nginx
    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: campus-backend-service
            port:
              number: 8000
      
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: campus-frontend-service
            port:
              number: 3000
